# CourserDRF

./: pyproject.toml  requirements.txt
config/: settings.py  urls.py
courses/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
courses/migrations/: 0001_initial.py  0002_paymenttype_alter_lesson_course_payments.py  0003_payments_paid_lesson_alter_payments_paid_course.py  0004_course_owner_lesson_owner.py  0005_alter_course_description_alter_lesson_description_and_more.py
users/: admin.py  models.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_username.py  0003_user_role.py
